<com.example.baptiste.cvbaptistedesbois.View.FlyMenu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue1"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:onClick="onAboutClick"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/about"
                />
            <TextView
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/about"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:onClick="onSkillsClick"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/skills"
                />
            <TextView
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/skills"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:onClick="onScolarityClick"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/education"
                />
            <TextView
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/edu"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:onClick="onExperienceClick"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/pro"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/profExp"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:onClick="onProjectClick"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/projects"
                />
            <TextView
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/projects"
                />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onContactClick">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/contact"
                />
            <TextView
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/contact"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:orientation="vertical">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/header"
            android:src="@drawable/menu_button"
            android:onClick="toggleMenu"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@color/header"
            android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/me"
                    android:id="@+id/imageView"
                   />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Baptiste Desbois"
                android:textColor="@color/white"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/student"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">
            <TableRow>
                <TextView
                    android:paddingTop="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/about"
                    android:text="@string/about"
                    android:drawablePadding="15dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:onClick="onAboutClick"
                    />
                <TextView
                    android:paddingTop="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/skills"
                    android:drawablePadding="15dp"
                    android:text="@string/skills"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:onClick="onSkillsClick"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:paddingTop="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/education"
                    android:text="@string/edu"
                    android:drawablePadding="15dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:onClick="onScolarityClick"
                    />
                <TextView
                    android:paddingTop="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/pro"
                    android:drawablePadding="15dp"
                    android:text="@string/profExp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:onClick="onExperienceClick"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:paddingTop="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/projects"
                    android:text="@string/projects"
                    android:drawablePadding="15dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:onClick="onProjectClick"
                    />
                <TextView
                    android:paddingTop="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/contact"
                    android:text="@string/contact"
                    android:drawablePadding="15dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:onClick="onContactClick"
                    />
            </TableRow>
        </TableLayout>
        </ScrollView>
    </LinearLayout>
</com.example.baptiste.cvbaptistedesbois.View.FlyMenu>
